fix header burger click and overflow hiddent true|false

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ html {
     &__burger {
         float: left;
         height: 50px;
+        width: 50px;
         vertical-align: middle;
         &.active {
             background: $gray;
@@ -55,6 +56,7 @@ html {
     &__search {
         float: right;
         height: 50px;
+        width: 50px;
         vertical-align: middle;
         &.active {
             background: $gray;
